--- a/Home.html
+++ b/Home.html
@@ -36,14 +36,13 @@
           <ul class="navbar-nav ms-auto mb-2 mb-md-0">
             <li class="nav-item"><a href="Home.html" class="nav-link fw-bold text-dark">Home</a></li>
             <li class="nav-item"><a href="products.html" class="nav-link fw-bold text-dark">Shop</a></li>
-            <li class="nav-item"><a href="#" class="nav-link fw-bold text-dark">About Us</a></li>
-            <li class="nav-item"><a href="#" class="nav-link fw-bold text-dark">Blog</a></li>
-            <li class="nav-item"><a href="#" class="nav-link fw-bold text-dark">Contact Us</a></li>
+            <li class="nav-item"><a href="About.html" class="nav-link fw-bold text-dark">About Us</a></li>
+            <li class="nav-item"><a href="Contact.html" class="nav-link fw-bold text-dark">Contact Us</a></li>
           </ul>
           <div class="d-flex align-items-center ms-md-3 mt-3 mt-md-0">
             <button id="darkModeToggle" class="btn btn-outline-dark me-3" aria-label="Toggle dark mode"><i
                 class="bi bi-moon"></i></button>
-            <a href="Login.html" class="me-3 fw-bold text-dark text-decoration-none">Login</a>
+            <a href="Login.html"  class="me-3 fw-bold text-dark text-decoration-none">Login</a>
             <a href="cart.html" class="d-inline-block"
               style="width:40px; height:40px; background:#000; border-radius:50%; text-align:center; line-height:40px;">
               <i class="bi bi-cart3" style="color:#fff; font-size:1.3rem;"></i>
@@ -250,19 +249,32 @@
   <footer class="bg-white text-light pt-5 pb-4 mt-5">
     <div class="container">
       <div class="row gy-4">
+        <!-- Company Info -->
+        <div class="col-12 col-md-2">
+          <h5 class="mb-3" style="color: #fc8c06;">ElectraCart</h5>
+          <p class="text-dark small">
+            Bringing the latest electronics to your doorstep with speed, security, and service you can trust.
+          </p>
+          <ul class="list-unstyled text-dark small">
+            <li><i class="bi bi-geo-alt-fill me-2"></i> 34/1000, NH 66, Edappally Junction, Kochi, Kerala, India - 682024</li>
+            <li><i class="bi bi-telephone-fill me-2"></i> +91 9446579836</li>
+            <li><i class="bi bi-envelope-fill me-2"></i> contact@electracart.in</li>
+          </ul>
+        </div>
+        <!-- Company Info End -->
         <!-- Useful Links -->
-        <div class="col-12 col-md-3">
+        <div class="col-12 col-md-2">
           <h5 class="mb-3" style="color: #fc8c06;">Useful Links</h5>
           <ul class="list-unstyled dark-text text-dark">
             <li><a href="Home.html" class="text-dark text-decoration-none">Home</a></li>
             <li><a href="products.html" class="text-dark dark-text text-decoration-none">Shop</a></li>
             <li><a href="cart.html" class="text-dark dark-text text-decoration-none">Cart</a></li>
             <li><a href="Login.html" class="text-dark dark-text text-decoration-none">Login</a></li>
-            <li><a href="#" class="text-dark dark-text text-decoration-none">About Us</a></li>
+            <li><a href="About.html" class="text-dark dark-text text-decoration-none">About Us</a></li>
           </ul>
         </div>
         <!-- Our Services -->
-        <div class="col-12 col-md-3">
+        <div class="col-12 col-md-2">
           <h5 class="mb-3" style="color: #fc8c06;">Our Services</h5>
           <ul class="list-unstyled dark-text text-dark">
             <li>Fast Shipping</li>
