--- a/Login.html
+++ b/Login.html
@@ -2,30 +2,19 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Phlox - Electronics Store</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-  <link rel="stylesheet" href="newStyle.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+  <link rel="stylesheet" href="newStyle.css" />
 
   <style>
-    /* html,
-      body {
-        height: 10%;
-        margin: 0;
-      } */
-  
     body {
       display: flex;
       flex-direction: column;
     }
-  
-    /* This pushes the footer down */
-    /* main {
-        flex: 1;
-      } */
   </style>
 </head>
 
@@ -35,16 +24,14 @@
     <nav class="navbar navbar-expand-md navbar-light bg-white">
       <div class="container-fluid">
         <div class="d-flex align-items-center">
-          <img src="media/Home/Logolight.png" alt="ElectraCart Logo" class="logo-img" id="logo-img">
+          <img src="media/Home/Logolight.png" alt="ElectraCart Logo" class="logo-img" id="logo-img" />
           <div class="logo d-flex flex-column ms-2" style="line-height:1;">
             <div style="font-size:2rem; font-weight:400; letter-spacing:0.5px;">
-              <span style="color:#222; font-weight:400;" class="dark-text">Electra</span><span
-                style="color:#ff9800; font-weight:400;">Cart</span>
+              <span style="color:#222; font-weight:400;" class="dark-text">Electra</span><span style="color:#ff9800; font-weight:400;">Cart</span>
             </div>
-            <div
-              style="font-size:14px; letter-spacing:0.4em; color:#222; opacity:0.8; margin-top:0.2em; font-weight:200;"
-              class="dark-text">
-              GADGET STORE</div>
+            <div class="dark-text" style="font-size:14px; letter-spacing:0.4em; color:#222; opacity:0.8; margin-top:0.2em; font-weight:200;">
+              GADGET STORE
+            </div>
           </div>
         </div>
         <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar"
@@ -55,14 +42,14 @@
           <ul class="navbar-nav ms-auto mb-2 mb-md-0">
             <li class="nav-item"><a href="Home.html" class="nav-link fw-bold text-dark">Home</a></li>
             <li class="nav-item"><a href="products.html" class="nav-link fw-bold text-dark">Shop</a></li>
-            <li class="nav-item"><a href="#" class="nav-link fw-bold text-dark">About Us</a></li>
-            <li class="nav-item"><a href="#" class="nav-link fw-bold text-dark">Blog</a></li>
-            <li class="nav-item"><a href="#" class="nav-link fw-bold text-dark">Contact Us</a></li>
+            <li class="nav-item"><a href="About.html" class="nav-link fw-bold text-dark">About Us</a></li>
+            <li class="nav-item"><a href="Contact.html" class="nav-link fw-bold text-dark">Contact Us</a></li>
           </ul>
           <div class="d-flex align-items-center ms-md-3 mt-3 mt-md-0">
-            <button id="darkModeToggle" class="btn btn-outline-dark me-3" aria-label="Toggle dark mode"><i
-                class="bi bi-moon"></i></button>
-            <a href="Login.html" class="me-3 fw-bold text-dark text-decoration-none">Login</a>
+            <button id="darkModeToggle" class="btn btn-outline-dark me-3" aria-label="Toggle dark mode">
+              <i class="bi bi-moon"></i>
+            </button>
+            <a href="Login.html" id="authLink" class="me-3 fw-bold text-dark text-decoration-none auth-link">Login</a>
             <a href="cart.html" class="d-inline-block"
               style="width:40px; height:40px; background:#000; border-radius:50%; text-align:center; line-height:40px;">
               <i class="bi bi-cart3" style="color:#fff; font-size:1.3rem;"></i>
@@ -73,10 +60,10 @@
     </nav>
   </header>
   <!-- Navbar End -->
+
   <main class="flex-grow-1 mt-5">
     <div class="d-flex justify-content-center align-items-center" style="padding-top: 90px;">
-      <form class="bg-white card shadow p-4 rounded-4 login" style="width: 100%; max-width: 400px;"
-        onsubmit="login(event)">
+      <form class="bg-white card shadow p-4 rounded-4 login" style="width: 100%; max-width: 400px;" onsubmit="login(event)">
         <h3 class="text-center mb-4 text-dark">Login</h3>
         <div class="mb-3">
           <input type="text" class="form-control" placeholder="Username" id="username" required />
@@ -88,31 +75,76 @@
         <div class="text-center mt-3">
           <span class="text-dark">Or </span>
           <a href="Register.html" class="fw-bold text-decoration-none text-wa">Register</a>
+          <br>
+          <!-- botton for delete the uploaded account -->
+          <button onclick="deleteAccount()" class="btn btn-danger">Delete My Account</button>
+
         </div>
       </form>
-
     </div>
   </main>
-  <!-- Main Content End -->
 
   <!-- Footer -->
   <footer class="bg-white text-light pb-0 mb-0">
     <div class="container">
-      <hr class="mt-4" style="border-color:#ff8000;">
+      <hr class="mt-4" style="border-color:#ff8000;" />
       <div class="text-center small dark-text text-dark">
         &copy; 2025 ElectraCart. All rights reserved.
       </div>
     </div>
   </footer>
 
+  <!-- Login Logic -->
+   <script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const authLink = document.getElementById("authLink");
+    const loggedInUser = JSON.parse(localStorage.getItem("loggedInUser"));
+
+    if (!authLink) return;
+
+    if (loggedInUser) {
+      authLink.textContent = "Logoutttt";
+      // not working  >......................................................................................................
+      authLink.classList.add("disabled");
+      authLink.href = "#";
+      authLink.addEventListener("click", function (e) {
+        e.preventDefault();
+        if (confirm("Do you want to logout?")) {
+          localStorage.removeItem("loggedInUser");
+          alert("You have been logged out.");
+          window.location.reload();
+        }
+      });
+    } else {
+      authLink.textContent = "Login";
+      authLink.href = "Login.html";
+    }
+  });
+</script>
 
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+
+<script>
+  function deleteAccount() {
+    const loggedInUser = JSON.parse(localStorage.getItem('loggedInUser'));
+    if (!loggedInUser) return alert("You're not logged in.");
+
+    if (confirm("Are you sure you want to delete your account? This cannot be undone.")) {
+      let users = JSON.parse(localStorage.getItem('users') || '[]');
+      users = users.filter(u => u.username !== loggedInUser.username);
+      localStorage.setItem('users', JSON.stringify(users));
+      localStorage.removeItem('loggedInUser');
+      alert("Your account has been deleted.");
+      window.location.href = "Register.html";
+    }
+  }
+</script>
+
+
   <script src="script.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
 
