--- a/Register.html
+++ b/Register.html
@@ -54,9 +54,8 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-md-0">
                         <li class="nav-item"><a href="Home.html" class="nav-link fw-bold text-dark">Home</a></li>
                         <li class="nav-item"><a href="products.html" class="nav-link fw-bold text-dark">Shop</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link fw-bold text-dark">About Us</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link fw-bold text-dark">Blog</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link fw-bold text-dark">Contact Us</a></li>
+                        <li class="nav-item"><a href="About.html" class="nav-link fw-bold text-dark">About Us</a></li>
+                        <li class="nav-item"><a href="Contact.html" class="nav-link fw-bold text-dark">Contact Us</a></li>
                     </ul>
                     <div class="d-flex align-items-center ms-md-3 mt-3 mt-md-0">
                         <button id="darkModeToggle" class="btn btn-outline-dark me-3" aria-label="Toggle dark mode"><i
@@ -134,40 +133,59 @@
 
     <!-- Scripts -->
     <script>
-        document.getElementById('registerForm').addEventListener('submit', function (e) {
-            e.preventDefault();
+  document.getElementById('registerForm').addEventListener('submit', function (e) {
+    e.preventDefault();
 
-            const password = document.getElementById('password').value.trim();
-            const confirmPassword = document.getElementById('confirmPassword').value.trim();
-            const passwordError = document.getElementById('passwordError');
-            const confirmError = document.getElementById('confirmError');
+    const fullname = document.getElementById('fullname').value.trim();
+    const email = document.getElementById('email').value.trim();
+    const username = document.getElementById('username').value.trim();
+    const password = document.getElementById('password').value.trim();
+    const confirmPassword = document.getElementById('confirmPassword').value.trim();
+    const passwordError = document.getElementById('passwordError');
+    const confirmError = document.getElementById('confirmError');
 
-            let isValid = true;
-            
-            // Password length validation
-            if (password.length < 8) {
-                passwordError.classList.remove('d-none');
-                isValid = false;
-            } else {
-                passwordError.classList.add('d-none');
-            }
+    let isValid = true;
 
-            // Confirm password match
-            if (password !== confirmPassword) {
-                confirmError.classList.remove('d-none');
-                isValid = false;
-            } else {
-                confirmError.classList.add('d-none');
-            }
+    // Password validations
+    if (password.length < 8) {
+      passwordError.classList.remove('d-none');
+      isValid = false;
+    } else {
+      passwordError.classList.add('d-none');
+    }
 
-            if (isValid) {
-                // You can replace this with actual backend submission logic
-                alert("Registration successful!");
-                this.reset(); // Reset form
-                window.location.href = "login.html";
-            }
-        });
-    </script>
+    if (password !== confirmPassword) {
+      confirmError.classList.remove('d-none');
+      isValid = false;
+    } else {
+      confirmError.classList.add('d-none');
+    }
+
+    if (isValid) {
+      // Fetch existing users or initialize array
+      const users = JSON.parse(localStorage.getItem('users') || '[]');
+
+      // Check if username already exists
+      const usernameTaken = users.some(u => u.username === username);
+      if (usernameTaken) {
+        alert('Username already taken!');
+        return;
+      }
+
+      // Add new user
+      users.push({ fullname, email, username, password });
+      localStorage.setItem('users', JSON.stringify(users));
+
+      alert('Registration successful!');
+      this.reset();
+      window.location.href = 'Login.html';
+    }
+  });
+</script>
+
+
+
+
     <script src="script.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
