--- a/cart.html
+++ b/cart.html
@@ -57,9 +57,8 @@
           <ul class="navbar-nav ms-auto mb-2 mb-md-0">
             <li class="nav-item"><a href="Home.html" class="nav-link fw-bold text-dark">Home</a></li>
             <li class="nav-item"><a href="products.html" class="nav-link fw-bold text-dark">Shop</a></li>
-            <li class="nav-item"><a href="#" class="nav-link fw-bold text-dark">About Us</a></li>
-            <li class="nav-item"><a href="#" class="nav-link fw-bold text-dark">Blog</a></li>
-            <li class="nav-item"><a href="#" class="nav-link fw-bold text-dark">Contact Us</a></li>
+            <li class="nav-item"><a href="About.html" class="nav-link fw-bold text-dark">About Us</a></li>
+            <li class="nav-item"><a href="Contact.html" class="nav-link fw-bold text-dark">Contact Us</a></li>
           </ul>
           <div class="d-flex align-items-center ms-md-3 mt-3 mt-md-0">
             <button id="darkModeToggle" class="btn btn-outline-dark me-3" aria-label="Toggle dark mode"><i
@@ -76,7 +75,7 @@
   </header>
   <!-- navbar end -->
 
-  <div class="container">
+   <div class="container">
     <h2 class="mb-4">Your Cart</h2>
     <div id="cart-container"></div>
 
@@ -116,6 +115,16 @@
     </div>
   </div>
 
+  <!-- Footer -->
+  <footer class="bg-white text-light pb-0 mt-5 mb-0">
+    <div class="container">
+      <hr class="mt-4" style="border-color:#ff8000;">
+      <div class="text-center small dark-text text-dark">
+        &copy; 2025 ElectraCart. All rights reserved.
+      </div>
+    </div>
+  </footer>
+
   <!-- Scripts -->
   <script>
     const cartItems = JSON.parse(localStorage.getItem("cart")) || [];
@@ -123,45 +132,75 @@
     const subtotalEl = document.getElementById("subtotal");
     const shippingCost = 50;
     const gstRate = 0.18;
-
     let subtotal = 0;
 
-    if (cartItems.length === 0) {
-      cartContainer.innerHTML = "<div class='alert alert-warning'>Your cart is empty.</div>";
-    } else {
+    function renderCart() {
+      if (cartItems.length === 0) {
+        cartContainer.innerHTML = "<div class='alert alert-warning'>Your cart is empty.</div>";
+        return;
+      }
+
+      cartContainer.innerHTML = "";
+
       cartItems.forEach(item => {
-        subtotal += parseFloat(item.price);
+        const itemTotal = item.price * item.quantity;
+        subtotal += itemTotal;
 
         cartContainer.innerHTML += `
-        <div class="card mb-3">
-          <div class="card-body d-flex justify-content-between align-items-center">
-            <div>
-              <h5 class="mb-1">${item.name}</h5>
-              <p class="mb-0">₹${item.price}</p>
+          <div class="card mb-3">
+            <div class="card-body d-flex justify-content-between align-items-center">
+              <div class="d-flex align-items-center">
+                <img src="${item.image}" alt="${item.name}" width="50" class="img-fluid rounded" />
+                <div class="ms-3">
+                  <h6 class="mb-1">${item.brand}</h6>
+                  <h6 class="mb-1">${item.name}</h6>
+                  <p class="mb-1">Price: ₹${item.price} x ${item.quantity}</p>
+                  <p class="mb-0 fw-bold">Total: ₹${itemTotal.toFixed(2)}</p>
+                </div>
+              </div>
+              <div class="text-end">
+                <i class="bi bi-dash-circle text-danger me-2" style="cursor:pointer;" onclick="decreaseQty(${item.id})"></i>
+                <i class="bi bi-plus-circle text-success" style="cursor:pointer;" onclick="increaseQty(${item.id})"></i>
+              </div>
             </div>
-            <i class="bi bi-x-circle text-danger" style="cursor:pointer;" onclick="removeItem('${item.name}')"></i>
           </div>
-        </div>
-      `;
+        `;
       });
+
+      const gst = parseFloat((subtotal * gstRate).toFixed(2));
+      const total = subtotal + shippingCost + gst;
+
+      subtotalEl.textContent = subtotal.toFixed(2);
+      document.getElementById("gst").textContent = gst.toFixed(2);
+      document.getElementById("shipping").textContent = shippingCost.toFixed(2);
+      document.getElementById("total").textContent = total.toFixed(2);
     }
 
-    const gst = parseFloat((subtotal * gstRate).toFixed(2));
-    const total = subtotal + shippingCost + gst;
-
-    subtotalEl.textContent = subtotal.toFixed(2);
-    document.getElementById("gst").textContent = gst.toFixed(2);
-    document.getElementById("shipping").textContent = shippingCost.toFixed(2);
-    document.getElementById("total").textContent = total.toFixed(2);
-
-    // Remove item function
-    function removeItem(name) {
-      const newCart = cartItems.filter(item => item.name !== name);
-      localStorage.setItem("cart", JSON.stringify(newCart));
-      window.location.reload(); // Refresh to reflect changes
+    // Increase quantity
+    function increaseQty(id) {
+      const index = cartItems.findIndex(item => item.id === id);
+      if (index !== -1) {
+        cartItems[index].quantity += 1;
+        localStorage.setItem("cart", JSON.stringify(cartItems));
+        location.reload();
+      }
     }
 
-    // Handle checkout form submission
+    // Decrease quantity
+    function decreaseQty(id) {
+      const index = cartItems.findIndex(item => item.id === id);
+      if (index !== -1) {
+        if (cartItems[index].quantity > 1) {
+          cartItems[index].quantity -= 1;
+        } else {
+          cartItems.splice(index, 1); // Remove if quantity is 1
+        }
+        localStorage.setItem("cart", JSON.stringify(cartItems));
+        location.reload();
+      }
+    }
+
+    // Handle checkout
     document.getElementById("checkout-form").addEventListener("submit", function (e) {
       e.preventDefault();
 
@@ -169,15 +208,19 @@
       const phone = document.getElementById("phone").value.trim();
       const address = document.getElementById("address").value.trim();
 
+      const total = parseFloat(document.getElementById("total").textContent);
+
       if (name && phone && address && total > 50) {
         alert(`Thank you, ${name}! Your order has been placed.\nTotal: ₹${total.toFixed(2)}`);
         localStorage.removeItem("cart");
-        window.location.href = "Home.html"; // Redirect after order
-      }else{
-        alert(`Please choose your products from Shop page before placing an order.`);
- window.location.href = "products.html";
+        window.location.href = "Home.html";
+      } else {
+        alert("Please select items from the shop before placing an order.");
+        window.location.href = "products.html";
       }
     });
+
+    renderCart();
   </script>
 <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
