--- a/products.html
+++ b/products.html
@@ -56,14 +56,14 @@
           <ul class="navbar-nav ms-auto mb-2 mb-md-0">
             <li class="nav-item"><a href="Home.html" class="nav-link fw-bold text-dark">Home</a></li>
             <li class="nav-item"><a href="products.html" class="nav-link fw-bold text-dark">Shop</a></li>
-            <li class="nav-item"><a href="#" class="nav-link fw-bold text-dark">About Us</a></li>
-            <li class="nav-item"><a href="#" class="nav-link fw-bold text-dark">Blog</a></li>
-            <li class="nav-item"><a href="#" class="nav-link fw-bold text-dark">Contact Us</a></li>
+            <li class="nav-item"><a href="About.html" class="nav-link fw-bold text-dark">About Us</a></li>
+            <li class="nav-item"><a href="Contact.html" class="nav-link fw-bold text-dark">Contact Us</a></li>
           </ul>
           <div class="d-flex align-items-center ms-md-3 mt-3 mt-md-0">
             <button id="darkModeToggle" class="btn btn-outline-dark me-3" aria-label="Toggle dark mode"><i
                 class="bi bi-moon"></i></button>
-            <a href="Login.html" class="me-3 fw-bold text-dark text-decoration-none">Login</a>
+            <!-- login button -->
+            <a href="Login.html" id="authLink" class="me-3 fw-bold text-dark text-decoration-none auth-link">Login</a>
             <a href="cart.html" class="d-inline-block"
               style="width:40px; height:40px; background:#000; border-radius:50%; text-align:center; line-height:40px;">
               <i class="bi bi-cart3" style="color:#fff; font-size:1.3rem;"></i>
@@ -75,190 +75,228 @@
   </header>
   <!-- Navbar End -->
 
-  <div class="container mt-5 text-black">
-    <div class="row">
-      <!-- Filter Section -->
-      <div class="col-md-3">
-        <div class="filter-section">
-          <h5 class="fw-bold mb-3 ">Filters</h5>
-          <label class="form-label">Price</label>
-          <input type="range" class="form-range" min="100" max="3000" id="priceFilter">
-          <label class="form-label mt-3">Brand</label>
-          <select class="form-select" id="brandFilter">
-            <option value="">All</option>
-            <option value="Samsung">Samsung</option>
-            <option value="Apple">Apple</option>
-            <option value="Sony">Sony</option>
-            <option value="Dell">Dell</option>
-          </select>
-          <label class="form-label mt-3">Item</label>
-          <select class="form-select" id="categoryFilter">
-            <option value="">All</option>
-            <option value="phone">Phones</option>
-            <option value="laptop">Laptops</option>
-            <option value="tv">TV/Home Appliances</option>
-            <option value="audio">Audio Devices</option>
-            <option value="camera">Cameras</option>
-            <option value="accessory">Accessories</option>
-          </select>
-        </div>
-      </div>
+ <div class="container mt-5 text-black">
+  <div class="row">
+    <!-- Filter Section -->
+    <div class="col-md-3">
+      <div class="filter-section">
+        <h5 class="fw-bold mb-3">Filters</h5>
+        <label class="form-label">Max Price: ₹<span id="priceDisplay">3000</span></label>
+        <input type="range" class="form-range" min="100" max="3000" step="50" id="priceFilter" value="3000" />
+        
+        <label class="form-label mt-3">Brand</label>
+        <select class="form-select" id="brandFilter">
+          <option value="">All</option>
+          <option value="Samsung">Samsung</option>
+          <option value="Apple">Apple</option>
+          <option value="Sony">Sony</option>
+          <option value="Dell">Dell</option>
+        </select>
 
-      <!-- Product Section -->
-      <div class="col-md-9">
-        <div class="sort-section d-flex justify-content-between align-items-center">
-          <h5 class="mb-0">Sort by:</h5>
-          <select class="form-select w-auto" id="sortOptions">
-            <option value="price-asc">Price: Low to High</option>
-            <option value="price-desc">Price: High to Low</option>
-            <option value="bestseller">Best Seller</option>
-            <option value="trending">Trending</option>
-          </select>
-        </div>
-
-        <div id="product-sections"></div>
+        <label class="form-label mt-3">Item</label>
+        <select class="form-select" id="categoryFilter">
+          <option value="">All</option>
+          <option value="phone">Phones</option>
+          <option value="laptop">Laptops</option>
+          <option value="tv">TV/Home Appliances</option>
+          <option value="audio">Audio Devices</option>
+          <option value="camera">Cameras</option>
+          <option value="accessory">Accessories</option>
+        </select>
       </div>
     </div>
-  </div>
 
-
-
-
-
-
-  <!-- product details Modal -->
-   <!-- Product Details Modal -->
-<div class="modal fade" id="productModal" tabindex="-1" aria-labelledby="productModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-        <!-- <h5 class="modal-title" id="productModalLabel">Product Details</h5> -->
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    <!-- Product Section -->
+    <div class="col-md-9">
+      <div class="sort-section d-flex justify-content-between align-items-center">
+        <h5 class="mb-0">Sort by:</h5>
+        <select class="form-select w-auto" id="sortOptions">
+          <option value="price-asc">Price: Low to High</option>
+          <option value="price-desc">Price: High to Low</option>
+          <option value="bestseller">Best Seller</option>
+          <option value="trending">Trending</option>
+        </select>
       </div>
-      <div class="modal-body" id="productDetailsContent">
-        <!-- Content will be injected here -->
-      </div>
+      <div id="product-sections"></div>
     </div>
   </div>
 </div>
 
-<!-- js function for show details -->
- <script>
-  function showDetails(productId) {
-  const product = products.find(p => p.id === productId);
-  const content = `
-    <div class="row text-black">
-      <div class="col-md-5">
-        <img src="${product.image}" alt="${product.name}" class="img-fluid rounded">
+<!-- Product Modal -->
+<div class="modal fade" id="productModal" tabindex="-1" aria-labelledby="productModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="col-md-7">
-        <h3>${product.name}</h3>
-        <p><strong>Price:</strong> $${product.price}</p>
-        <p><strong>Brand:</strong> ${product.brand}</p>
-        <p><strong>Category:</strong> ${product.category}</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque pretium, nisi sed facilisis imperdiet, neque erat pretium eros, non laoreet sapien ligula nec leo.</p>
-        <button class="btn btn-dark" onclick="addToCart(${product.id})">Add to Cart</button>
-      </div>
+      <div class="modal-body" id="productDetailsContent"></div>
     </div>
-  `;
-  document.getElementById("productDetailsContent").innerHTML = content;
-}
+  </div>
+</div>
 
- </script>
+<!-- Footer -->
+<footer class="bg-white text-light pb-0 mb-0">
+  <div class="container">
+    <hr class="mt-4" style="border-color:#ff8000;" />
+    <div class="text-center small dark-text text-dark">
+      &copy; 2025 ElectraCart. All rights reserved.
+    </div>
+  </div>
+</footer>
 
+<script>
+  const products = [
+    { id: 1, name: "iPhone 14", price: 999, category: "phone", brand: "Apple", image: "phone.jpg", bestseller: true, trending: false },
+    { id: 2, name: "Dell XPS 13", price: 1199, category: "laptop", brand: "Dell", image: "laptop.jpg", bestseller: true, trending: true },
+    { id: 3, name: "Samsung QLED TV", price: 1499, category: "tv", brand: "Samsung", image: "tv.jpg", bestseller: false, trending: true },
+    { id: 4, name: "Sony Headphones", price: 299, category: "audio", brand: "Sony", image: "media/Product/Sony-Headphones.jpg", spec: "With Mic:Yes <br/> Bluetooth version: 5.2", bestseller: true, trending: true },
+    { id: 5, name: "Canon DSLR", price: 899, category: "camera", brand: "Canon", image: "camera.jpg", bestseller: false, trending: false },
+    { id: 6, name: "Wireless Charger", price: 49, category: "accessory", brand: "Apple", image: "media/Product/Wireless-Charger.jpg", bestseller: true, trending: false },
+    { id: 7, name: "Apple-TV-HD-32GB", price: 999, category: "accessory", brand: "Apple", image: "media/Product/Apple-TV-HD-32GB.jpg", bestseller: true, trending: false },
+    { id: 8, name: "Samsung Galaxy S23", price: 799, category: "phone", brand: "Samsung", image: "media/Product/Samsung-Galaxy-S23.jpg", bestseller: true, trending: true },
+    { id: 9, name: "LG OLED TV", price: 1999, category: "tv", brand: "LG", image: "media/Product/LG-OLED-TV.jpg", bestseller: false, trending: true },
+    { id: 10, name: "Bose Soundbar", price: 599, category: "audio", brand: "Bose", image: "media/Product/Bose-Soundbar.jpg", bestseller: true, trending: false }
+  ];
 
-  <script>
-    const products = [
-      { id: 1, name: "iPhone 14", price: 999, category: "phone", brand: "Apple", image: "phone.jpg", bestseller: true, trending: false },
-      { id: 2, name: "Dell XPS 13", price: 1199, category: "laptop", brand: "Dell", image: "laptop.jpg", bestseller: true, trending: true },
-      { id: 3, name: "Samsung QLED TV", price: 1499, category: "tv", brand: "Samsung", image: "tv.jpg", bestseller: false, trending: true },
-      { id: 4, name: "Sony Headphones", price: 299, category: "audio", brand: "Sony", image: "audio.jpg", bestseller: true, trending: true },
-      { id: 5, name: "Canon DSLR", price: 899, category: "camera", brand: "Canon", image: "camera.jpg", bestseller: false, trending: false },
-      { id: 6, name: "Wireless Charger", price: 49, category: "accessory", brand: "Apple", image: "accessory.jpg", bestseller: true, trending: false }
-    ];
+  function renderProducts() {
+    const productContainer = document.getElementById("product-sections");
+    productContainer.innerHTML = "";
 
-    function renderProducts() {
-      const productContainer = document.getElementById("product-sections");
-      productContainer.innerHTML = "";
+    const selectedCategory = document.getElementById("categoryFilter").value;
+    const selectedBrand = document.getElementById("brandFilter").value;
+    const maxPrice = parseInt(document.getElementById("priceFilter").value);
+    const sortOption = document.getElementById("sortOptions").value;
 
-      const selectedCategory = document.getElementById("categoryFilter").value;
-      const selectedBrand = document.getElementById("brandFilter").value;
-      const maxPrice = document.getElementById("priceFilter").value;
-      const sortOption = document.getElementById("sortOptions").value;
+    const filtered = products
+      .filter(p => (!selectedCategory || p.category === selectedCategory))
+      .filter(p => (!selectedBrand || p.brand === selectedBrand))
+      .filter(p => p.price <= maxPrice);
 
-      let filteredProducts = products.filter(p => {
-        return (selectedCategory === "" || p.category === selectedCategory) &&
-               (selectedBrand === "" || p.brand === selectedBrand) &&
-               (maxPrice === "" || p.price <= parseInt(maxPrice));
-      });
+    if (sortOption === "price-asc") filtered.sort((a, b) => a.price - b.price);
+    else if (sortOption === "price-desc") filtered.sort((a, b) => b.price - a.price);
+    else if (sortOption === "bestseller") filtered = filtered.filter(p => p.bestseller);
+    else if (sortOption === "trending") filtered = filtered.filter(p => p.trending);
 
-      if (sortOption === "price-asc") {
-        filteredProducts.sort((a, b) => a.price - b.price);
-      } else if (sortOption === "price-desc") {
-        filteredProducts.sort((a, b) => b.price - a.price);
-      } else if (sortOption === "bestseller") {
-        filteredProducts = filteredProducts.filter(p => p.bestseller);
-      } else if (sortOption === "trending") {
-        filteredProducts = filteredProducts.filter(p => p.trending);
+    const categoryNames = {
+      phone: "Phones",
+      laptop: "Laptops",
+      tv: "TV/Home Appliances",
+      audio: "Audio Devices",
+      camera: "Cameras",
+      accessory: "Accessories"
+    };
+
+    const shownCategories = new Set();
+
+    for (let product of filtered) {
+      if (!shownCategories.has(product.category)) {
+        productContainer.innerHTML += `<div class="category-title">${categoryNames[product.category]}</div><div class="row" id="section-${product.category}"></div>`;
+        shownCategories.add(product.category);
       }
 
-      const categoryNames = {
-        phone: "Phones",
-        laptop: "Laptops",
-        tv: "TV/Home Appliances",
-        audio: "Audio Devices",
-        camera: "Cameras",
-        accessory: "Accessories"
-      };
-
-      const shownCategories = new Set();
-
-      for (let i = 0; i < filteredProducts.length; i++) {
-        const product = filteredProducts[i];
-        if (!shownCategories.has(product.category)) {
-          productContainer.innerHTML += `<div class="category-title">${categoryNames[product.category]}</div><div class="row" id="section-${product.category}"></div>`;
-          shownCategories.add(product.category);
-        }
-        const section = document.getElementById(`section-${product.category}`);
-        const productCard = `
-          <div class="col-md-4 mb-4">
-            <div class="card">
-              <img src="${product.image}" class="card-img-top" alt="${product.name}">
-              <div class="card-body">
-                <h5 class="card-title">${product.name}</h5>
-                <p class="card-text">$${product.price}</p>
-                <div class="d-flex justify-content-between">
+      const section = document.getElementById(`section-${product.category}`);
+      section.innerHTML += `
+        <div class="col-md-4 mb-4">
+          <div class="card">
+            <img src="${product.image}" class="card-img-top" alt="${product.name}" />
+            <div class="card-body">
+              <h5 class="card-title">${product.name}</h5>
+              <p class="card-text">₹${product.price}</p>
+              <div class="d-flex justify-content-between">
                 <button class="btn btn-dark me-2" onclick="addToCart(${product.id})">Add to Cart</button>
                 <button class="btn btn-outline-dark" onclick="showDetails(${product.id})" data-bs-toggle="modal" data-bs-target="#productModal">View Details</button>
-                </div>
-                </div>
+              </div>
             </div>
-          </div>`;
-        document.getElementById(`section-${product.category}`).innerHTML += productCard;
-      }
+          </div>
+        </div>
+      `;
     }
 
-    function addToCart(productId) {
-      let cart = JSON.parse(localStorage.getItem("cart")) || [];
-      const item = products.find(p => p.id === productId);
-      cart.push(item);
-      localStorage.setItem("cart", JSON.stringify(cart));
-      alert("Added to cart!");
+    if (filtered.length === 0) {
+      productContainer.innerHTML = `<div class="alert alert-warning">No products match the selected filters.</div>`;
+    }
+  }
+
+  function showDetails(productId) {
+    const product = products.find(p => p.id === productId);
+    const content = `
+      <div class="row text-black">
+        <div class="col-md-5">
+          <img src="${product.image}" alt="${product.name}" class="img-fluid rounded" />
+        </div>
+        <div class="col-md-7">
+          <h3>${product.name}</h3>
+          <p><strong>Price:</strong> ₹${product.price}</p>
+          <p><strong>Brand:</strong> ${product.brand}</p>
+          <p><strong>Category:</strong> ${product.category}</p>
+          <p>Highlights: ${product.spec || 'N/A'}</p>
+          <button class="btn btn-dark" onclick="addToCart(${product.id})">Add to Cart</button>
+        </div>
+      </div>
+    `;
+    document.getElementById("productDetailsContent").innerHTML = content;
+  }
+
+  function addToCart(productId) {
+    let cart = JSON.parse(localStorage.getItem("cart")) || [];
+    const item = products.find(p => p.id === productId);
+    const index = cart.findIndex(i => i.id === productId);
+
+    if (index !== -1) {
+      cart[index].quantity += 1;
+    } else {
+      cart.push({ ...item, quantity: 1 });
     }
 
-    document.getElementById("sortOptions").addEventListener("change", renderProducts);
-    document.getElementById("priceFilter").addEventListener("input", renderProducts);
-    document.getElementById("brandFilter").addEventListener("change", renderProducts);
-    document.getElementById("categoryFilter").addEventListener("change", renderProducts);
+    localStorage.setItem("cart", JSON.stringify(cart));
+    alert("Added to cart!");
+  }
 
-    window.addEventListener("DOMContentLoaded", renderProducts);
-  </script>
+  // Event listeners
+  document.getElementById("priceFilter").addEventListener("input", () => {
+    document.getElementById("priceDisplay").textContent = document.getElementById("priceFilter").value;
+    renderProducts();
+  });
+  document.getElementById("brandFilter").addEventListener("change", renderProducts);
+  document.getElementById("categoryFilter").addEventListener("change", renderProducts);
+  document.getElementById("sortOptions").addEventListener("change", renderProducts);
+  window.addEventListener("DOMContentLoaded", renderProducts);
+</script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const authLink = document.getElementById("authLink");
+    const username = localStorage.getItem("user");
+
+    if (!authLink) return;
+
+    if (username) {
+      authLink.textContent = "Logout";
+      authLink.classList.add("disabled"); // disable click visually
+      authLink.style.pointerEvents = "auto"; // still clickable for logout
+      authLink.style.opacity = "1";
+      authLink.href = "#";
+      authLink.addEventListener("click", function (e) {
+        e.preventDefault();
+        if (confirm("Do you want to logout?")) {
+          localStorage.removeItem("user");
+          alert("You have been logged out.");
+          window.location.reload();
+        }
+      });
+    } else {
+      authLink.textContent = "Login";
+      authLink.href = "Login.html";
+      authLink.classList.remove("disabled");
+      authLink.style.pointerEvents = "auto";
+      authLink.style.opacity = "1";
+    }
+  });
+</script>
+
 </body>
-
 </html>
